--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <h1>Rajeshwari Andanagiri</h1>
     <h1> Crafting stories, One word at a time</h1>
-    <img src="images/Profile Photo.jpg" alt="Rajeshwari Andanagiri">
+    <img src="images/profile-photo.jpg" alt="Rajeshwari Andanagiri">
     <p>
       I’m a finance student and part-time writer who published my first book at 21(Currently I am not 21 though :p). I specialize in crime thrillers and suspense fiction, with a hopeful attempt at romance in the future. Outside of writing, I love books, mysteries, and simple joys like flowers, food, and especially biryani. Want to be friends? Just bring me any of these!
       <p/>
